--- a/index.html
+++ b/index.html
@@ -10,14 +10,19 @@
         </style>
     </head>
     <body>
-        <video autoplay playsinline muted id="webcam" width="224" height="224"></video>
-        <canvas id="canvas" width="224" height="224"></canvas>
+        <video autoplay playsinline muted id="webcam"></video>
+        <canvas id="canvas"></canvas>
         <h1 id="status">Loading...</h1>
         
         <script>
         async function setupWebcam() {
             return new Promise( ( resolve, reject ) => {
                 const webcamElement = document.getElementById( "webcam" );
+                webcamElement.width = window.innerWidth
+                webcamElement.height = window.innerHeight
+                const canvas = document.getElementById("canvas")
+                canvas.width = window.innerWidth
+                canvas.height = window.innerHeight
                 const navigatorAny = navigator;
                 navigator.getUserMedia = navigator.getUserMedia ||
                 navigatorAny.webkitGetUserMedia || navigatorAny.mozGetUserMedia ||
