--- a/index.html
+++ b/index.html
@@ -7,12 +7,39 @@
             img, video {
                 object-fit: cover;
             }
+            *{
+                margin: 0;
+                padding: 0;
+            }
+            .box {
+                width: 100%;
+                height: 100vh;
+                overflow: hidden;
+                position: relative;
+            }
+            video , canvas {
+                position: absolute;
+                left: 0;
+                top: 0;
+                right: 0;
+                bottom: 0;
+                width: 100%;
+                height: 100%;
+            }
+            video {
+                z-index: 1;
+            }
+            canvas {
+                z-index: 2;
+            }
         </style>
     </head>
     <body>
-        <video autoplay playsinline muted id="webcam"></video>
-        <canvas id="canvas"></canvas>
-        <h1 id="status">Loading...</h1>
+        <div class="box">
+            <video autoplay playsinline muted id="webcam"></video>
+            <canvas id="canvas"></canvas>
+            <h1 id="status">Loading...</h1>
+        </div>
         
         <script>
         async function setupWebcam() {
@@ -28,7 +55,10 @@
                 navigatorAny.webkitGetUserMedia || navigatorAny.mozGetUserMedia ||
                 navigatorAny.msGetUserMedia;
                 if( navigator.getUserMedia ) {
-                    navigator.getUserMedia( { video: true },
+                    navigator.getUserMedia( { 
+                            video: true,
+                            // 'video':{ 'facingMode': {exact: "environment"} }  // 摄像头后置
+                        },
                         stream => {
                             webcamElement.srcObject = stream;
                             webcamElement.addEventListener( 'loadeddata', resolve, false );
