--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
 <html>
     <head>
-        <title>Face Touch Detection with TensorFlow.js Part 2: Using BodyPix</title>
-        <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@2.0.0/dist/tf.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/body-pix@2.0"></script>
+        <title>H5摄像头</title>
         <style>
             img, video {
                 object-fit: cover;
@@ -16,6 +14,9 @@
                 height: 100vh;
                 overflow: hidden;
                 position: relative;
+                display: flex;
+                align-items: center;
+                justify-content: center;
             }
             video , canvas {
                 position: absolute;
@@ -38,7 +39,7 @@
         <div class="box">
             <video autoplay playsinline muted id="webcam"></video>
             <canvas id="canvas"></canvas>
-            <h1 id="status">Loading...</h1>
+            <h1>Loading...</h1>
         </div>
         
         <script>
@@ -71,67 +72,9 @@
             });
         }
  
-        let model = null;
- 
         (async () => {
-            // model = await bodyPix.load({
-            //     architecture: 'MobileNetV1',
-            //     outputStride: 16,
-            //     multiplier: 0.50,
-            //     quantBytes: 2
-            // });
             await setupWebcam();
-            // setInterval( predictImage, 200 );
         })();
- 
-        async function predictImage() {
-            const img = document.getElementById( "webcam" );
-            const segmentation = await model.segmentPersonParts( img );
-            if( segmentation.allPoses.length > 0 ) {
-                const keypoints = segmentation.allPoses[ 0 ].keypoints;
-                const nose = keypoints[ 0 ].position;
-                const earL = keypoints[ 3 ].position;
-                const earR = keypoints[ 4 ].position;
-                const earLtoNose = Math.sqrt( Math.pow( nose.x - earL.x, 2 ) + Math.pow( nose.y - earL.y, 2 ) );
-                const earRtoNose = Math.sqrt( Math.pow( nose.x - earR.x, 2 ) + Math.pow( nose.y - earR.y, 2 ) );
-                const faceRadius = Math.max( earLtoNose, earRtoNose );
- 
-                // Check if any of the left_hand(10) or right_hand(11) pixels are within the nose to faceRadius
-                let isTouchingFace = false;
-                for( let y = 0; y < 224; y++ ) {
-                    for( let x = 0; x < 224; x++ ) {
-                        if( segmentation.data[ y * 224 + x ] === 10 ||
-                            segmentation.data[ y * 224 + x ] === 11 ) {
-                            const distToNose = Math.sqrt( Math.pow( nose.x - x, 2 ) + Math.pow( nose.y - y, 2 ) );
-                            // console.log( distToNose );
-                            if( distToNose < faceRadius ) {
-                                isTouchingFace = true;
-                                break;
-                            }
-                        }
-                    }
-                    if( isTouchingFace ) {
-                        break;
-                    }
-                }
-                if( isTouchingFace ) {
-                    document.getElementById( "status" ).innerText = "Touch";
-                }
-                else {
-                    document.getElementById( "status" ).innerText = "Not Touch";
-                }
- 
-                // --- Uncomment the following to view the BodyPix mask ---
-                const canvas = document.getElementById( "canvas" );
-                bodyPix.drawMask(
-                    canvas, img,
-                    bodyPix.toColoredPartMask( segmentation ),
-                    0.7,
-                    0,
-                    false
-                );
-            }
-        }
         </script>
     </body>
 </html>
