--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
             return new Promise( ( resolve, reject ) => {
                 const webcamElement = document.getElementById( "webcam" );
                 webcamElement.width = window.innerWidth
-                webcamElement.height = window.innerHeight
+                webcamElement.height = 700
                 const canvas = document.getElementById("canvas")
                 canvas.width = window.innerWidth
-                canvas.height = window.innerHeight
+                canvas.height = 700
                 const navigatorAny = navigator;
                 navigator.getUserMedia = navigator.getUserMedia ||
                 navigatorAny.webkitGetUserMedia || navigatorAny.mozGetUserMedia ||
