--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
     </head>
     <body>
         <div class="box">
-            <video height="500" autoplay playsinline muted id="webcam"></video>
-            <canvas height="500" id="canvas"></canvas>
+            <video autoplay playsinline muted id="webcam"></video>
+            <canvas id="canvas"></canvas>
             <h1>Loading...</h1>
         </div>
         
@@ -43,8 +43,11 @@
             return new Promise( ( resolve, reject ) => {
                 const webcamElement = document.getElementById( "webcam" );
                 webcamElement.width = window.innerWidth
+                webcamElement.height = window.innerHeight
+
                 const canvas = document.getElementById("canvas")
                 canvas.width = window.innerWidth
+                canvas.height = window.innerHeight
                 const navigatorAny = navigator;
                 navigator.getUserMedia = navigator.getUserMedia ||
                 navigatorAny.webkitGetUserMedia || navigatorAny.mozGetUserMedia ||
