--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
         async function setupWebcam() {
             return new Promise( ( resolve, reject ) => {
                 const webcamElement = document.getElementById( "webcam" );
-                webcamElement.width = window.innerWidth
-                webcamElement.height = window.innerHeight
+                webcamElement.width = window.innerWidth / 1.5
+                webcamElement.height = window.innerHeight / 1.5
 
                 const canvas = document.getElementById("canvas")
-                canvas.width = window.innerWidth
-                canvas.height = window.innerHeight
+                canvas.width = window.innerWidth / 1.5
+                canvas.height = window.innerHeight / 1.5
                 const navigatorAny = navigator;
                 navigator.getUserMedia = navigator.getUserMedia ||
                 navigatorAny.webkitGetUserMedia || navigatorAny.mozGetUserMedia ||
@@ -72,6 +72,15 @@
         (async () => {
             await setupWebcam();
         })();
+
+        // 拍照
+        function playCamera() {
+            var canvas = document.getElementById("canvas")           
+            var context = canvas.getContext("2d")           
+            var video = document.getElementById("video")
+            context.drawImage(video, 0, 0, window.innerWidth, window.innerHeight)
+            console.log(`图片输出:${canvas.toDataURL("image/png")}`)
+        }
         </script>
     </body>
 </html>
