--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                 position: absolute;
                 left: 0;
                 top: 0;
+                transform: translate(-50% , -50%);
             }
             video {
                 z-index: 1;
