--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
             video , canvas {
                 position: absolute;
                 left: 50%;
-                top: 50%;
-                transform: translate(-50% , -50%);
+                top: 0;
+                transform: translate(0 , -50%);
             }
             video {
                 z-index: 1;
@@ -43,12 +43,12 @@
         async function setupWebcam() {
             return new Promise( ( resolve, reject ) => {
                 const webcamElement = document.getElementById( "webcam" );
-                webcamElement.width = window.innerWidth / 1.5
-                webcamElement.height = window.innerHeight / 1.5
+                webcamElement.width = window.innerWidth
+                webcamElement.height = window.innerHeight / 1.2
 
                 const canvas = document.getElementById("canvas")
-                canvas.width = window.innerWidth / 1.5
-                canvas.height = window.innerHeight / 1.5
+                canvas.width = window.innerWidth
+                canvas.height = window.innerHeight / 1.2
                 const navigatorAny = navigator;
                 navigator.getUserMedia = navigator.getUserMedia ||
                 navigatorAny.webkitGetUserMedia || navigatorAny.mozGetUserMedia ||
