--- a/index.html
+++ b/index.html
@@ -20,9 +20,8 @@
             }
             video , canvas {
                 position: absolute;
-                left: 50%;
+                left: 0;
                 top: 0;
-                transform: translate(0 , -50%);
             }
             video {
                 z-index: 1;
