--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <title>H5摄像头</title>
         <style>
             img, video {
-                object-fit: cover;
+                object-fit: contain;
             }
             *{
                 margin: 0;
